fix sign up button going off on small screens

--- a/public/framework/sass/header.sass
+++ b/public/framework/sass/header.sass
@@ -21,6 +21,12 @@ header
   .signin-btn
     @extend .my-btn
     padding-top: 15px
+    position: absolute
+    right: 10px
+
+  .signup-btn
+    @extend .signin-btn
+    right: 10px+100px+5px
 
   #navBarSearchForm
     width: 100%
